[package]
name = "izb"
version = "0.1.0"
edition = "2021"
description = "A library of helper functions for provisioning ZFS-on-Root VMs with zfsbootmenu using Incus"
license = "AGPL-3.0"
homepage = "https://github.com/OtherJohnGray/izb"
repository = "https://github.com/OtherJohnGray/izb"
readme = "README.md"
keywords = ["zfs", "incus", "vm", "provisioning", "zfsbootmenu"]
categories = ["virtualization", "filesystem", "command-line-utilities", "provisioning", "devops"]

[dependencies]
chrono = "0.4"